fixed navbar spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,14 +14,14 @@
 }
 
 .navbar-wrap{
-  width: 90vw;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .navbar-logo{
-  margin: 20px 20px 20px 0px;
+  margin: 25px 20px 20px 5vw;
   font-family: Dancing Script;
   font-size: large;
 }
@@ -31,6 +31,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0;
+  margin-right: 5vw;
 
   li{
     margin: 20px;
